clusters/server/apps/shithead/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shithead-api
  namespace: shithead
spec:
  selector: { app: shithead-api}
  ports:
    - port: 80
      targetPort: 8080
